:lipstick: avoid empty white space in prefs in dark mode
A horizontal white space was incorrectly shown in the preferences
in dark mode.
We just ensure the html/body fills the entire vertical space to
make sure the dark background is applied everywhere.

--- a/src/options/options.css
+++ b/src/options/options.css
@@ -1,3 +1,9 @@
+html,
+body {
+  margin: 0;
+  height: 100%;
+}
+
 body {
   --grey10: #e7e7e7;
 
